Fix image loading and deployment script to host
Change-Id: Iebbbc8149100858d9a0522bbd6fe95e746487878

--- a/src/scss/modules/_ticker.scss
+++ b/src/scss/modules/_ticker.scss
@@ -16,10 +16,6 @@ limitations under the License.
 
 $unit: 8px;
 
-
-$unit: 8px;
-
-
 ssml-timeline::part(status) {
   background: $playhead-bg;
   box-sizing: border-box;
@@ -41,7 +37,7 @@ ssml-timeline::part(status) {
 
 ssml-timeline::part(blankstate) {
   align-items: flex-end;
-  background: url('/images/blankstate.png') center center no-repeat;
+  background: url('/nightingale-ssml-editor/images/blankstate.png') center center no-repeat;
   box-sizing: border-box;
   border-radius: 4px;
   justify-content: center;
