Refactor logic to Typescript
Change-Id: Ief0d79a41922e64cee0b70dbe8826e920db00112

--- a/src/scss/modules/_loading.scss
+++ b/src/scss/modules/_loading.scss
@@ -22,7 +22,7 @@ $loading: '.loading';
   align-items: center;
   background-color: $color-bg;
   display: flex;
-  justify-content: center;;
+  justify-content: center;
   bottom: 0;
   left: 0;
   right: 0;
